--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>율리의 코딩자료</h1>
-    <a href="test_0527/cell.html">May 27 - practice celltrion contents</a>
+<ul>
+        <li><a href="test_0527/cell.html">May 27 - practice celltrion contents</a><br></li><br>
+        <li><a href="test_0527_2/index.html">May 27 - practice celltrion contents 2</a></li>
+</ul>
 </body>
 </html>
