--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,8 @@
     <h1>율리의 코딩자료</h1>
 <ul>
         <li><a href="test_0527/cell.html">May 27 - practice celltrion contents</a><br></li><br>
-        <li><a href="test_0527_2/index.html">May 27 - practice celltrion contents 2</a></li>
+        <li><a href="test_0527_2/index.html">May 27 - practice celltrion contents 2</a></li><br>
+        <li><a href="test_0528/index.html">May 28 - posco international</a></li>
 </ul>
 </body>
 </html>
