0529 집에서 연습용 폴더를 만듦

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>율리의 코딩자료</h1>
 <ul>
+        <li><a href="myroom/index.html">LE CODAGE D'YULIE DANS MA CHAMBRE</a></li><br>
         <li><a href="test_0527/cell.html">May 27 - practice celltrion contents</a><br></li><br>
         <li><a href="test_0527_2/index.html">May 27 - practice celltrion contents 2</a></li><br>
         <li><a href="test_0528/index.html">May 28 - posco international</a></li><br>
