0530 집에서 연습2

--- a/myroom/index.html
+++ b/myroom/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Ce sont mes pratiques du codage.</h1>
+    <ul>
+        <li><a href="pratique_01/index.html">Contact Us | Purito par Yulie</a></li>
+    </ul>
 </body>
 </html>
