--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li><a href="test_0527_2/index.html">May 27 - practice celltrion contents 2</a></li><br>
         <li><a href="test_0528/index.html">May 28 - posco international</a></li><br>
         <li><a href="test_0529/index.html">May 29 - woori asset management</a></li><br>
-        <li><a href="test_0530/index.html">May 30 cj group</a></li>
+        <li><a href="test_0530/index.html">May 30 cj group</a></li><br>
+        <li><a href="Chinhung/index.html">May 30 Chinhung</a></li>
 </ul>
 </body>
 </html>
