--- a/Chinhung/index.html
+++ b/Chinhung/index.html
@@ -45,7 +45,7 @@
                         <a href="#n">
                             <div class="photo"><img src="imges/biz_1.png" alt="토목사업 사진"></div>
                             <h3>토목사업</h3>
-                            <p>진흥의 토목기술은 인간과 자연을 조화시키고, 공간과 공간을 이어주고 있습니다.</p>
+                            <p>진흥의 토목기술은<br>인간과 자연을 조화시키고, 공간과 공간을 이어주고 있습니다.</p>
                             <span class="more">자세히보기</span>
                         </a>
                     </li>
@@ -53,7 +53,7 @@
                         <a href="#n">
                             <div class="photo"><img src="imges/biz_2.png" alt="건축사업 사진"></div>
                             <h3>건축사업</h3>
-                            <p>열정과 문화가 숨쉬고 삶의 미학을 창조하는 건축을 진흥이 창조하고 있습니다.</p>
+                            <p>열정과 문화가 숨쉬고 삶의 미학을<br>창조하는 건축을 진흥이 창조하고 있습니다.</p>
                             <span class="more">자세히보기</span>
                         </a>
                     </li>
@@ -79,11 +79,35 @@
     </section><!--biz-->
     <section class="brand">
         <div class="wrapper">
-
+            <h2>Post-Premium Place</h2>
+            <p>모두들 프리미엄만을 이야기할 때&nbsp;<br>
+                해링턴 플레이스는 '혁신'을 꿈꾸었습니다.<br>
+                전통성 위에 미래를 짓습니다.</p>
+            <a href="#n">해링턴 플레이스 바로가기</a>
         </div><!--wrapper-->
     </section><!--brand-->
-    <footer>
-
+    <footer><!-- footer 이하는 nav 태그 쓰지 않음 -->
+        <div class="wrapper">
+            <div class="f_nav">
+                <ul>
+                    <li class="privacy"><a href="#n">개인정보처리방침</a></li>
+                    <li><a href="#n">법적고지</a></li>
+                    <li><a href="#n">찾아오시는 길</a></li>
+                    <li><a href="#n">고객상담</a></li>
+                    <li><a href="#n">사이트맵</a></li>
+                </ul>
+            </div><!--f_nav-->
+            <!-- 요소 이름 부여 시 위/아래로 구분하면 : top/sub -->
+            <div class="f_sub">
+                <div class="f_info">
+                    <span>진흥기업</span>
+                    <span>TEL : 032-432-0658</span>
+                    <span>FAX : 032-432-0659</span>
+                    <address>주소 : 인천광역시 연수구 컨벤시아대로 69 807호</address>
+                </div><!--f_info-->
+                <div class="copyright">ⓒ HYOSUNG. ALL RIGHTS RESERVED.</div><!--copyright-->
+            </div><!--f_sub-->
+        </div><!--wrapper-->
     </footer>
 </body>
 </html>
