0531 마우스오버 스타일 연습

--- a/Chinhung/index.html
+++ b/Chinhung/index.html
@@ -7,107 +7,109 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!-- header : 로고와 메뉴가 배치되는 영역 / 메인페이지와 컨텐츠페이지에서 동일하게 보이는 영역-->
-    <header>
-        <div class="wrapper">
-            <h1 class="logo"><a href="index.html"><img src="imges/logo.png" alt="진흥기업 로고"></a></h1>
-            <!-- gnb = global navigation bar : 메인/콘텐츠 페이지 모두에 나타나는 상단 메뉴-->
-            <nav class="gnb">
-                <ul>
-                    <!-- 임시링크 : #n, # = 링크 주소가 아직 없어서 임시임을 표시하는 명령(클릭해도 새로고침 안됨)
-                    href="" 이렇게 비워두면 클릭시 새로고침 됨.-->
-                    <li><a href="#n">기업소개</a></li>
-                    <li><a href="#n">사업분야</a></li>
-                    <li><a href="#n">홍보센터</a></li>
-                    <li><a href="#n">고객센터</a></li>
-                    <li><a href="#n">사이버감사실</a></li>
-                </ul>
-            </nav>
-        </div><!--wrapper-->
-    </header>
-    <!-- visual : 홈페이지 상단에 이미지가 크게 들어가고 홈페이지의 슬로건 등을 쓰는 영역-->
-    <section class="visual">
-        <div class="wrapper">
-            <h2>65년 건설 명가</h2>
-            <p>진흥기업은 65년간 축적된 기술력을 통해 더 나은 대한민국의 미래를 만들어 왔고,<br>
-                최상의 품질로 실현하는 고객 감동으로 대한민국 건설 명가의 자리를 지켜왔습니다.</p>
-        </div><!--wrapper-->
-    </section><!--visual-->
-    <section class="biz">
-        <div class="wrapper">
-            <div class="tit">
-                <h2>BUSINESS</h2>
-                <p>1959년 창업, 현재에 이르기까지 쉼없이 달려온 진흥기업</p>
-            </div><!--tit-->
-            <div class="list">
-                <ul>
-                    <li>
-                        <a href="#n">
-                            <div class="photo"><img src="imges/biz_1.png" alt="토목사업 사진"></div>
-                            <h3>토목사업</h3>
-                            <p>진흥의 토목기술은<br>인간과 자연을 조화시키고, 공간과 공간을 이어주고 있습니다.</p>
-                            <span class="more">자세히보기</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#n">
-                            <div class="photo"><img src="imges/biz_2.png" alt="건축사업 사진"></div>
-                            <h3>건축사업</h3>
-                            <p>열정과 문화가 숨쉬고 삶의 미학을<br>창조하는 건축을 진흥이 창조하고 있습니다.</p>
-                            <span class="more">자세히보기</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#n">
-                            <div class="photo"><img src="imges/biz_3.png" alt="주택사업 사진"></div>
-                            <h3>주택사업</h3>
-                            <p>편리한 생활터전을 가꾸고 고객의 신뢰를 바탕으로 친환경 주거문화의 트랜드를 제시하고 있습니다.</p>
-                            <span class="more">자세히보기</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#n">
-                            <div class="photo"><img src="imges/biz_4.png" alt="플랜트사업 사진"></div>
-                            <h3>플랜트사업</h3>
-                            <p>진흥은 오랜 노하우와 전문성을 가지고, 산업발전의 기틀을 마련하는 플랜트 사업을 성공적으로 구축해왔습니다.</p>
-                            <span class="more">자세히보기</span>
-                        </a>
-                    </li>
-                </ul>
-            </div><!--list-->
-        </div><!--wrapper-->
-    </section><!--biz-->
-    <section class="brand">
-        <div class="wrapper">
-            <h2>Post-Premium Place</h2>
-            <p>모두들 프리미엄만을 이야기할 때&nbsp;<br>
-                해링턴 플레이스는 '혁신'을 꿈꾸었습니다.<br>
-                전통성 위에 미래를 짓습니다.</p>
-            <a href="#n">해링턴 플레이스 바로가기</a>
-        </div><!--wrapper-->
-    </section><!--brand-->
-    <footer><!-- footer 이하는 nav 태그 쓰지 않음 -->
-        <div class="wrapper">
-            <div class="f_nav">
-                <ul>
-                    <li class="privacy"><a href="#n">개인정보처리방침</a></li>
-                    <li><a href="#n">법적고지</a></li>
-                    <li><a href="#n">찾아오시는 길</a></li>
-                    <li><a href="#n">고객상담</a></li>
-                    <li><a href="#n">사이트맵</a></li>
-                </ul>
-            </div><!--f_nav-->
-            <!-- 요소 이름 부여 시 위/아래로 구분하면 : top/sub -->
-            <div class="f_sub">
-                <div class="f_info">
-                    <span>진흥기업</span>
-                    <span>TEL : 032-432-0658</span>
-                    <span>FAX : 032-432-0659</span>
-                    <address>주소 : 인천광역시 연수구 컨벤시아대로 69 807호</address>
-                </div><!--f_info-->
-                <div class="copyright">ⓒ HYOSUNG. ALL RIGHTS RESERVED.</div><!--copyright-->
-            </div><!--f_sub-->
-        </div><!--wrapper-->
-    </footer>
+    <div id="wrap">
+        <!-- header : 로고와 메뉴가 배치되는 영역 / 메인페이지와 컨텐츠페이지에서 동일하게 보이는 영역-->
+        <header>
+            <div class="wrapper">
+                <h1 class="logo"><a href="index.html"><img src="imges/logo.png" alt="진흥기업 로고"></a></h1>
+                <!-- gnb = global navigation bar : 메인/콘텐츠 페이지 모두에 나타나는 상단 메뉴-->
+                <nav class="gnb">
+                    <ul>
+                        <!-- 임시링크 : #n, # = 링크 주소가 아직 없어서 임시임을 표시하는 명령(클릭해도 새로고침 안됨)
+                        href="" 이렇게 비워두면 클릭시 새로고침 됨.-->
+                        <li><a href="#n">기업소개</a></li>
+                        <li><a href="#n">사업분야</a></li>
+                        <li><a href="#n">홍보센터</a></li>
+                        <li><a href="#n">고객센터</a></li>
+                        <li><a href="#n">사이버감사실</a></li>
+                    </ul>
+                </nav>
+            </div><!--wrapper-->
+        </header>
+        <!-- visual : 홈페이지 상단에 이미지가 크게 들어가고 홈페이지의 슬로건 등을 쓰는 영역-->
+        <section class="visual">
+            <div class="wrapper">
+                <h2>65년 건설 명가</h2>
+                <p>진흥기업은 65년간 축적된 기술력을 통해 더 나은 대한민국의 미래를 만들어 왔고,<br>
+                    최상의 품질로 실현하는 고객 감동으로 대한민국 건설 명가의 자리를 지켜왔습니다.</p>
+            </div><!--wrapper-->
+        </section><!--visual-->
+        <section class="biz">
+            <div class="wrapper">
+                <div class="tit">
+                    <h2>BUSINESS</h2>
+                    <p>1959년 창업, 현재에 이르기까지 쉼없이 달려온 진흥기업</p>
+                </div><!--tit-->
+                <div class="list">
+                    <ul>
+                        <li>
+                            <a href="#n">
+                                <div class="photo"><img src="imges/biz_1.png" alt="토목사업 사진"></div>
+                                <h3>토목사업</h3>
+                                <p>진흥의 토목기술은<br>인간과 자연을 조화시키고, 공간과 공간을 이어주고 있습니다.</p>
+                                <span class="more">자세히보기</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#n">
+                                <div class="photo"><img src="imges/biz_2.png" alt="건축사업 사진"></div>
+                                <h3>건축사업</h3>
+                                <p>열정과 문화가 숨쉬고 삶의 미학을<br>창조하는 건축을 진흥이 창조하고 있습니다.</p>
+                                <span class="more">자세히보기</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#n">
+                                <div class="photo"><img src="imges/biz_3.png" alt="주택사업 사진"></div>
+                                <h3>주택사업</h3>
+                                <p>편리한 생활터전을 가꾸고 고객의 신뢰를 바탕으로 친환경 주거문화의 트랜드를 제시하고 있습니다.</p>
+                                <span class="more">자세히보기</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#n">
+                                <div class="photo"><img src="imges/biz_4.png" alt="플랜트사업 사진"></div>
+                                <h3>플랜트사업</h3>
+                                <p>진흥은 오랜 노하우와 전문성을 가지고, 산업발전의 기틀을 마련하는 플랜트 사업을 성공적으로 구축해왔습니다.</p>
+                                <span class="more">자세히보기</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div><!--list-->
+            </div><!--wrapper-->
+        </section><!--biz-->
+        <section class="brand">
+            <div class="wrapper">
+                <h2>Post-Premium Place</h2>
+                <p>모두들 프리미엄만을 이야기할 때&nbsp;<br>
+                    해링턴 플레이스는 '혁신'을 꿈꾸었습니다.<br>
+                    전통성 위에 미래를 짓습니다.</p>
+                <a href="#n">해링턴 플레이스 바로가기</a>
+            </div><!--wrapper-->
+        </section><!--brand-->
+        <footer><!-- footer 이하는 nav 태그 쓰지 않음 -->
+            <div class="wrapper">
+                <div class="f_nav">
+                    <ul>
+                        <li class="privacy"><a href="#n">개인정보처리방침</a></li>
+                        <li><a href="#n">법적고지</a></li>
+                        <li><a href="#n">찾아오시는 길</a></li>
+                        <li><a href="#n">고객상담</a></li>
+                        <li><a href="#n">사이트맵</a></li>
+                    </ul>
+                </div><!--f_nav-->
+                <!-- 요소 이름 부여 시 위/아래로 구분하면 : top/sub -->
+                <div class="f_sub">
+                    <div class="f_info">
+                        <span>진흥기업</span>
+                        <span>TEL : 032-432-0658</span>
+                        <span>FAX : 032-432-0659</span>
+                        <address>주소 : 인천광역시 연수구 컨벤시아대로 69 807호</address>
+                    </div><!--f_info-->
+                    <div class="copyright">ⓒ HYOSUNG. ALL RIGHTS RESERVED.</div><!--copyright-->
+                </div><!--f_sub-->
+            </div><!--wrapper-->
+        </footer>
+    </div><!--wrap-->
 </body>
 </html>
