--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <li><a href="test_0528/index.html">May 28 - posco international</a></li><br>
         <li><a href="test_0529/index.html">May 29 - woori asset management</a></li><br>
         <li><a href="test_0530/index.html">May 30 cj group</a></li><br>
-        <li><a href="Chinhung/index.html">May 30 chinhung</a></li><br>
-        <li><a href="test_0531/index.html">May 31 bodojaryo, button</a></li>
+        <li><a href="Chinhung/index.html">May 30 - chinhung</a></li><br>
+        <li><a href="test_0531/index.html">May 31 - bodojaryo, button</a></li><br>
+        <li><a href="djbus/index.html">June 03 - daejeon bokhab terminal</a></li>
 </ul>
 </body>
 </html>
