--- a/djbus/index.html
+++ b/djbus/index.html
@@ -115,12 +115,52 @@
                 </section><!--//news-->
                 <section class="movie">
                     <div class="wrapper">
-
+                        <div class="tit"><h2><em>DTC</em> 홍보영상</h2></div>
+                        <div class="list">
+                            <ul>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo"><img src="imges/movie_1.png" alt="버스 터미널에 미술품이 전시된 영상 썸네일"></div>
+                                        <h3>버스터미널, 특별한 예술공간으로 변신</h3>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo"><img src="imges/movie_2.png" alt="작가 인터뷰 영상 썸네일"></div>
+                                        <h3>DTC 아트센터 - 대전MBC '숨쉬다 展'</h3>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo"><img src="imges/movie_3.png" alt="고 이구열 회장의 동상 사진"></div>
+                                        <h3>대전복합터미널 Daejeon Terminal Complex</h3>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div><!--//list-->
                     </div><!--//wrapper-->
                 </section><!--//movie-->
             </div><!--//promotion-->
         </div><!--//container-->
-        <footer></footer>
+        <footer>
+            <div class="wrapper">
+                <div class="f_nav">
+                    <ul>
+                        <li class="privacy"><a href="#n">개인정보처리방침</a></li>
+                        <li><a href="#n">이용약관</a></li>
+                        <li><a href="#n"> 회사소개</a></li>
+                        <li><a href="#n">사이트맵</a></li>
+                    </ul>
+                </div><!--//f_nav-->
+                <div class="f_info">
+                    <span>대진복합터미널(주)</span><br>
+                    <address>주소 : 대전 동구 동서대로 1695번길 30</address>
+                    <span>TEL : 1668-3300</span>
+                    <span>사업자등록번호 : 306-81-02924</span>
+                </div>
+                <div class="copyright">ⓒ 대전복합터미널(주) All Rights Reserved.</div>
+            </div><!--//wrapper-->
+        </footer>
     </div><!--//wrap-->
 </body>
 </html>
