--- a/djbus/index.html
+++ b/djbus/index.html
@@ -75,7 +75,7 @@
                         <div class="tit">
                             <h2><em>DTC</em> 소식</h2>
                             <p>대전복합터미널의 새로운 소식을만나보세요.</p>
-                            <a href="#n">더보기</a>
+                            
                         </div><!--//tit-->
                         <div class="list">
                             <ul>
@@ -111,6 +111,10 @@
                                 </li>
                             </ul>
                         </div><!--//list-->
+                        <a href="#n" class="more">더보기</a>
+                        <!--공지사항의 더보기는 공지사항 최근 글을 보고 나서 더 보고 싶을 때 클릭할 수 있는 구조가 되어야함.
+                        그럼 코딩의 순서가 최근 게시물이 나오고 나서 그 다음에 더 보기 버튼이 배치되어야함.
+                        이것이 웹접근성.-->
                     </div><!--//wrapper-->
                 </section><!--//news-->
                 <section class="movie">
@@ -159,6 +163,13 @@
                     <span>사업자등록번호 : 306-81-02924</span>
                 </div>
                 <div class="copyright">ⓒ 대전복합터미널(주) All Rights Reserved.</div>
+                <div class="familysite">
+                    <button>
+                        <span>FAMILY SITE</span>
+                        <img src="imges/family_ico.svg" alt="열기">
+                    <!--웹 접근성에서 아이콘은 alt을 비워둬도 된다고 허가함.-->
+                    </button>
+                </div>
             </div><!--//wrapper-->
         </footer>
     </div><!--//wrap-->
