--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <li><a href="Chinhung/index.html">May 30 - chinhung</a></li><br>
         <li><a href="test_0531/index.html">May 31 - bodojaryo, button</a></li><br>
         <li><a href="djbus/index.html">June 03 - daejeon bokhab terminal</a></li><br>
-        <li><a href="simpol/index.html">June 05 - Simpol</a></li>
+        <li><a href="simpol/index.html">June 05 - Simpol</a></li><br>
+        <li><a href="cheongsando/index.html">June 10 - Cheongsando</a></li>
 </ul>
 </body>
 </html>
