--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <li><a href="djbus/index.html">June 03 - daejeon bokhab terminal</a></li><br>
         <li><a href="simpol/index.html">June 05 - Simpol</a></li><br>
         <li><a href="cheongsando/index.html">June 10 - Cheongsando</a></li><br>
-        <li><a href="test_0611/index.html">June 11 - Picogram - web responsible test</a></li>
+        <li><a href="test_0611/index.html">June 11 - Picogram - web responsible test</a></li><br>
+        <li><a href="test_0612/index.html">June 12 - Erom - web responsible test</a></li>
 </ul>
 </body>
 </html>
