0612 erom 반응형 연습 2

--- a/test_0612/index.html
+++ b/test_0612/index.html
@@ -11,17 +11,49 @@
         <div class="container">
             <section class="sound">
                 <div class="wrapper">
-                    <h2>Sound<br>health solutions</h2>
+                    <h2>Sound <br> health solutions</h2>
                     <p>Erom’s pledge to create “sound health solutions” with consistency Erom Story that began small and is achieving big</p>
                 </div><!--//wrapper-->
             </section><!--//sound-->
             <section class="health">
                 <div class="wrapper">
-                    <h2>Sound<br>health solutions</h2>
+                    <h2>Sound <br> health solutionssolutionssolutionssolutions</h2>
                     <p>Erom’s pledge to create “sound health solutions” with<br>
                         consistency Erom Story that began small and is achieving big</p>
                 </div><!--//wrapper-->
-            </section><!--//sound-->
+            </section><!--//health-->
+            <section class="solution">
+                <div class="wrapper">
+                    <h2>Sound<br>health solutions</h2>
+                    <p>
+                        <span>Erom’s pledge to create “sound health solutions” with</span>
+                        <span>consistency Erom Story that began small and is achieving big</span>
+                    </p>
+                </div><!--//wrapper-->
+            </section><!--//solution-->
+            <section class="story">
+                <div class="wrapper">
+                    <div class="rowgroup1">
+                        <div class="txt">
+                            <strong>Erom Global Story that provides new <br> answers on health through nature.</strong>
+                            <h2>Erom Story.</h2>
+                            <p>Health solution corporation through the <br> harmony of nature and science Beneficial for humankind, <br> beneficial for the world</p>
+                            <div class="more"><a href="#n">view more</a></div><!--//more-->
+                        </div><!--//txt-->
+                        <div class="photo"><img src="imges/story1.png" alt=""></div><!--//photo-->
+                    </div><!--//rowgroup1-->
+                    <div class="rowgroup2">
+                        <div class="txt">
+                            <strong>Finding Erom’s power that brings forth <br> science from nature</strong>
+                            <h2>RESEARCHER <br>INTRODUCTION</h2>
+                            <p>Healthy power of nature! <br> We are Erom Global’s Life Science Research Institute.</p>
+                            <div class="more"><a href="#n">view more</a></div><!--//more-->
+                        </div><!--//txt-->
+                        <div class="photo"><img src="imges/story2.png" alt=""></div><!--//photo-->
+                    </div>
+                </div><!--//wrapper-->
+            </section><!--//story-->
+
         </div><!--//container-->
     </div><!--//wrap-->
 </body>
