--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <li><a href="simpol/index.html">June 05 - Simpol</a></li><br>
         <li><a href="cheongsando/index.html">June 10 - Cheongsando</a></li><br>
         <li><a href="test_0611/index.html">June 11 - Picogram - web responsible test</a></li><br>
-        <li><a href="test_0612/index.html">June 12 - Erom - web responsible test</a></li>
+        <li><a href="test_0612/index.html">June 12 - Erom - web responsible test</a></li><br>
+        <li><a href="samsungscholarship/index.html">June 14 - Samsung Scholarship (web responsible - pc/mobile)</a></li>
 </ul>
 </body>
 </html>
