--- a/samsungscholarship/index.html
+++ b/samsungscholarship/index.html
@@ -39,12 +39,67 @@
             </section><!--//visual-->
             <section class="biz">
                 <div class="wrapper">
+                    <!-- 왼쪽에 고정할 요소는 div 하나로 묶어줌.
+                    오른쪽은 왼쪽보다 무조건 길어야함. 
+                    왼쪽/오른쪽 요소를 flex로 정렬하면 둘의 길이가 같아짐.
+                    그래서 반드시 길이를 다르게 css 설정을 해야함. -->
                     <div class="subject">
                         <strong class="tit">장학사업</strong>
                         <h2>꿈과 재능을 찾아서</h2>
                         <p>꿈과 가능성이 있는 청소년들이 자신의 꿈을 찾고 <br> 재능을 개발할 수 있도록 장학금을 지원하고 있습니다</p>
                     </div><!--//subject-->
-                    <div class="list"></div><!--//list-->
+                    <div class="list">
+                        <ul>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/biz1.png" alt="두 사람이 조언을 주고받는 사진"></div>
+                                    <h3 class="tit">멘토링 꿈장학사업</h3>
+                                    <p>멘토 선생님의 지지를 받으면서 자신의 꿈을 찾고 재능을 개발할 수 있도록 장학금을 지원하는 사업</p>
+                                    <span class="more">자세히보기</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/biz3.png" alt="두 사람이 조언을 주고받는 사진"></div>
+                                    <h3 class="tit">리더육성 장학사업</h3>
+                                    <p>선발된 재단 출신 꿈장학생들이  우리 사회의 각 분야에서 리더로 성장할 수 있도록 맞춤형으로 지원하는 사업</p>
+                                    <span class="more">자세히보기</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/biz2.png" alt="두 사람이 조언을 주고받는 사진"></div>
+                                    <h3 class="tit">배움터 교육지원사업</h3>
+                                    <p>지원이 필요한 아동·청소년을 위해 양질의 교육을 운영하고 교육복지 안전망을 구축하도록 지원하는 사업</p>
+                                    <span class="more">자세히보기</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/biz4.png" alt="두 사람이 조언을 주고받는 사진"></div>
+                                    <h3 class="tit">글로벌 장학사업</h3>
+                                    <p>한인후손과 개발도상국 아동·청소년과 대학생의 교육을 지원하고, 글로벌 리더로 양성하는 사업</p>
+                                    <span class="more">자세히보기</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/biz3.png" alt="두 사람이 조언을 주고받는 사진"></div>
+                                    <h3 class="tit">방과후학교 대상</h3>
+                                    <p>매년 1월, 우수한 방과후학교 프로그램을 운영하는 학교, 교사, 비영리단체를 시상</p>
+                                    <span class="more">자세히보기</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/biz6.png" alt="두 사람이 조언을 주고받는 사진"></div>
+                                    <h3 class="tit">청소년치아교정지원사업</h3>
+                                    <p>치아교정이 필요하나 가정형편으로 인해 치료를 받지 못한 청소년에게 무료 치아교정의 기회를 제공하는 사업</p>
+                                    <span class="more">자세히보기</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div><!--//list-->
                 </div><!--//wrapper-->
             </section><!--biz-->
             <section class="news">
