--- a/samsungscholarship/index.html
+++ b/samsungscholarship/index.html
@@ -103,10 +103,80 @@
                 </div><!--//wrapper-->
             </section><!--biz-->
             <section class="news">
-                <div class="wrapper"></div><!--//wrapper-->
+                <div class="wrapper">
+                    <div class="subject">
+                        <strong class="tit">재단소식</strong>
+                        <h2>장학·재단소식</h2>
+                        <p>관련 주요 소식을 전해 드립니다</p>
+                    </div>
+                    <div class="list">
+                        <ul>
+                            <li>
+                                <a href="#n">
+                                    <h3>2024년 글로벌 국외장학사업 공모</h3>
+                                    <p>글로벌 국외장학사업은 교육 지원의 필요성이 높은 개발도상국 아동 청소년에게 양질의 맞춤형 교육을 지원합니다. 자기 주도적인 참여와 상호 협력에 기반한 교육 방법을 통해 아동 청소년이 배움 공동체의 일원으로서 나눔을 실천하</p>
+                                    <span class="date">2024.04.22</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <h3>2024년 배움터 교육지원사업 지원 공모</h3>
+                                    <p>삼성꿈장학재단 2024년 배움터 교육지원사업 지원금의 적절한 사용 및 운영의 투명성 확보를 위하여 회계 검토 및 평가를 실시하고자 함.삼성꿈장학재단 2024년 배움터 교육지원사업 지원금 정산 및 결산 평가 용역업체 선정.</p>
+                                    <span class="date">2024.05.28</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <h3>장학생 집중 모니터링 및 생애단계별 성장사례 분석 연구 단행본 출판 제작 업체 선정 (재공고)</h3>
+                                    <p>서울특별시 및 경기도에 사업장을 두고 있으며 다음의 조건을 모두 만족할 것. 출판업종으로 조달청이 인정한 일반경쟁 입찰 참가자격이 있는 업체. 인쇄출판물 직접생산확인증명서 제출 가능 업체.</p>
+                                    <span class="date">2024.05.29</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="more"><a href="#n">더보기</a></div>
+                </div><!--//wrapper-->
             </section><!--news-->
             <section class="webzine">
-                <div class="wrapper"></div><!--//wrapper-->
+                <div class="wrapper">
+                    <div class="subject">
+                        <strong class="tit">vol.96 - 2024.05</strong>
+                        <h2>삼성꿈장학재단 웹진</h2>
+                    </div>
+                    <div class="list">
+                        <ul>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/webzine1.png" alt="행사 사진"></div>
+                                    <strong class="tit">리더육성 장학사업</strong>
+                                    <h3>이날만을 기다렸다! 아낌없이 주는 졸업생 선배들이 전하는 노하우</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/webzine2.png" alt="행사 사진"></div>
+                                    <strong class="tit">멘토링 꿈장학사업</strong>
+                                    <h3>멘토와 함께 꿈을 키워갑니다. 신청대상 : 저소득층 가정의 고등학생</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/webzine3.png" alt="행사 사진"></div>
+                                    <strong class="tit">2024년 꿈장학 공모전 결과</strong>
+                                    <h3>꿈장학 공모전 당선작④ - 캐릭터 디자인 부문 최우수상 이도경(상서고)</h3>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/webzine4.png" alt="행사 사진"></div>
+                                    <strong class="tit">희망나눔장학 수기 공모 당선작</strong>
+                                    <h3>기다리고 기다리던 꿈장학 학습멘토링 멘토로 도전하다</h3>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="more"><a href="#n">더보기</a></div>
+                </div><!--//wrapper-->
             </section><!--webzine-->
             <section class="introduce">
                 <div class="wrapper"></div><!--//wrapper-->
