0618 scholarship the end

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <li><a href="cheongsando/index.html">June 10 - Cheongsando</a></li><br>
         <li><a href="test_0611/index.html">June 11 - Picogram - web responsible test</a></li><br>
         <li><a href="test_0612/index.html">June 12 - Erom - web responsible test</a></li><br>
-        <li><a href="samsungscholarship/index.html">June 14 - Samsung Scholarship (web responsible - pc/mobile)</a></li>
+        <li><a href="samsungscholarship/index.html">June 14 - Samsung Scholarship (web responsible - pc/mobile)</a></li><br>
+        <li><a href="test_kd/index.html">June 18 - 평가</a></li>
 </ul>
 </body>
 </html>
