--- a/samsungscholarship/index.html
+++ b/samsungscholarship/index.html
@@ -179,10 +179,59 @@
                 </div><!--//wrapper-->
             </section><!--webzine-->
             <section class="introduce">
-                <div class="wrapper"></div><!--//wrapper-->
+                <div class="wrapper">
+                    <div class="subject">
+                        <strong class="tit">Samsung Dream Scholarship Foundation</strong>
+                        <h2>장학재단을 소개합니다</h2>
+                    </div>
+                    <div class="list">
+                        <ul>
+                            <li class="intro1">
+                                <a href="#n">
+                                    <strong>재단소개</strong>
+                                    <h3 class="long">삼성꿈장학재단은 더불어 성장하는 <br> 배움공동체를 지향합니다</h3>
+                                    <div class="more">
+                                        <span class="more1">재단소개</span>
+                                        <span class="more2">자세히보기</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="intro2">
+                                <a href="#n">
+                                    <strong>결산서류</strong>
+                                    <h3>삼성꿈장학재단의 결산서류와 기부금 내역을 <br> 공시합니다</h3>
+                                    <div class="more">
+                                        <span class="more1">결산서류</span>
+                                        <span class="more2">자세히보기</span>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!--//wrapper-->
             </section><!--introduce-->
         </div><!--//container-->
-        <footer></footer>
+        <footer>
+            <div class="wrapper">
+                <!-- 누르면 동작하는 기능 값 부여 = button tag
+                cf. 누르면 다른 페이지로 이동 = a tag -->
+                <div class="top"><button>TOP</button></div>
+                <div class="f_nav">
+                    <ul>
+                        <li><a>이용약관</a></li>
+                        <li><a>이메일 무단 수집거부</a></li>
+                        <li><a>개인정보처리방침</a></li>
+                        <li><a>교육부 홈페이지</a></li>
+                    </ul>
+                </div>
+                    <div class="f_info">
+                        <address>(우)04323 서울특별시 용산구 후암로 107 게이트웨이타워 20층</address>
+                        <span>TEL 02-727-5400</span>
+                        <span>FAX 02-727-5409</span>
+                    </div>
+                    <div class="copyright">ⓒ Samsung Dream Scholarship Foundation</div>
+            </div><!--wrapper-->
+        </footer>
     </div>
 </body>
 </html>
