--- a/eulyoo/index.html
+++ b/eulyoo/index.html
@@ -14,8 +14,29 @@
 </head>
 <body>
     <div id="wrap">
-        <header>
-            <div class="wrapper"></div>
+        <!-- 스크롤 되면 jquery에서 header에게 class="fixed"-->
+        <header class="fixed">
+            <div class="wrapper">
+                <!-- 로고 이미지가 검정/하양 교체됨. - 이는 이미지태그로 코딩 불가 - css에서 백그라운드
+                로 상황에 따라 교체하여야 함. -->
+                <h1 class="logo"><a href="#n">을유문화사</a></h1>
+                <nav class="gnb">
+                    <button class="gnb_open">메뉴열기</button>
+                    <div class="gnb_wrap">
+                        <ul>
+                            <li><a href="#n">을유문화사</a></li>
+                            <li><a href="#n">콘텐츠</a></li>
+                            <li><a href="#n">을유소식</a></li>
+                            <li><a href="#n">독자참여</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                <!-- top navigation bar  - 메뉴 외 상단에 위치하는 다른 요소 -->
+                <div class="tnb">
+                    <a href="#n" class="mypage">마이페이지</a>
+                    <a href="#n" class="search">검색</a>
+                </div>
+            </div><!--wrapper-->
         </header>
         <main class="container">
             <section class="visual">
@@ -118,11 +139,11 @@
                     </div>
                     <div class="list">
                         <ul>
-                            <li>
+                            <li class="on"> <!-- 마우스 오버한 li에만 on 클래스를 추가 -->
                                 <a href="#n">
                                     <div class="photo"><img src="imges/interview1.png" alt="피 인터뷰어 사진"></div>
                                     <div class="txt">
-                                        <h3>화가 홍지희</h3>
+                                        <h3>화가 <br> 홍지희</h3>
                                         <p>평소에 눈을 많이 사용해야 하는 직업이어서 시를 한 쪽씩 읽는 작업을 많이 하거든요. 그래서 『에밀리 디킨슨 시 선집』에 애정을 많이 담았던 것 같아요. 에밀리 디킨슨 같은 경우는 평소 노출이 많이 안 된 작가라고 해요. 사진도 한 장밖에 남아 있지 않은 신비로운 인물인데, 주변인이나 지식인들과 편지로 서신을 교류하면서 작품 활동을 하고 영감을 받았던 것들이 굉장히 인상 깊었습니다. 이 작품의 모티브 자체도 오고 가는 편지와 서신을 형상화해서 아날로그적인, 지금은 많이 잊히고 없어진 것들을 다시 돌아보는 소중함에 대해서 이야기하고 싶었습니다.</p>
                                         <span>자세히보기</span>
                                     </div>
@@ -132,17 +153,17 @@
                                 <a href="#n">
                                     <div class="photo"><img src="imges/interview2.png" alt="피 인터뷰어 사진"></div>
                                     <div class="txt">
-                                        <h3>서울대 교수 강초롱</h3>
+                                        <h3>서울대 교수 <br> 강초롱</h3>
                                         <p>원문도 마찬가지로 보부아르는 서술 톤이 감정적이지가 않거든요. 특히 『아주 편안한 죽음』에서는 그나마 감정적이었던 부분들도 제거하면서 훨씬 더 담담하고 객관적으로 사태를 서술하려고 해요. 그러면서도 그 안에서 독자들이 자신들만의 감정을 담아낼 수 있는 행간들을 마련해 놓고 있어요. 그래서 번역할 때 최대한 감정의 과잉을 덜어 내려고 많이 노력했어요. 단어 같은 경우도 가급적 뭔가 평이하지 않으면서도 과잉되지 않은 단어들을 좀 찾으려고 노력했던 것 같고요. 어머니와의 대화 부분에서는 어머니의 어투를 어떻게 살릴 것인가 고민했어요. 이게 19세기 말에 태어난 한 노파가 1960년대에 죽어 가는 내용이잖아요. 그러면 그 노파의 어투를 살리면서도 우리 독자들이 읽어야 하니 한국어의 정서와도 맞아떨어지는 게 필요하다고 생각했어요. 말투를 재현하는 데 신경을 썼던 것 같아요.</p>
                                         <span>자세히보기</span>
                                     </div>
                                 </a>
                             </li>
-                            <li>
+                            <li class="docu">
                                 <a href="#n">
                                     <div class="photo"><img src="imges/interview3.png" alt="피 인터뷰어 사진"></div>
                                     <div class="txt">
-                                        <h3><em>다큐멘터리</em> 사진가 신웅재</h3>
+                                        <h3><em>다큐멘터리</em> 사진가 <br> 신웅재</h3>
                                         <p>아버지께서 사진 찍는 걸 좋아하셨어요. 『타임』, 『뉴스위크』, 『내셔널지오그래픽』 같은 잡지도 구독해서 보셨죠. 덕분에 저도 자연스럽게 다큐멘터리 사진을 접할 수 있었어요. 다큐멘터리 사진 중에서도 포토저널리즘에 빠지게 된 계기가 두 번 있었어요. 첫 번째는 파이돈 출판사에서 나온 『Century』라는 책이에요. 1899년부터 1999년까지 100년간의 중요한 역사적 현장을 담은 사진집인데요. 그 책을 보며 다큐멘터리의 힘을 느꼈어요. 그중에 몇몇 사진들이 계속 머릿속에 맴돌았어요.</p>
                                         <span>자세히보기</span>
                                     </div>
@@ -153,7 +174,74 @@
                     <div class="more"><a href="#n">전체보기</a></div>
                 </div><!--wrapper-->
             </section><!--interview-->
-            <section class="series"></section><!--series-->
+            <section class="series">
+                <div class="wrapper">
+                    <div class="tit">
+                        <h2>시리즈</h2>
+                    </div>
+                    <div class="list swiper">
+                        <ul class="swiper-wrapper">
+                            <li class="long swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series1.png" alt="시리즈 썸네일"></div>
+                                    <strong>[연애편지] 미리보기</strong>
+                                    <h3>#5. 보부아르가 보낸 마지막 편지</h3>
+                                    <p>매우 소중한 당신. 어떤 편지도 부치지 않고, 어떤 편지도 오지 않는 영원 같은 시간이 흘렀어요. 당신에 관한 몇 가지 소식이 새어 들어왔어요. 당신이 『더 네이션』에 쓴 〈폴라무르 박사〉의 시나리오 작가(그의 이름을 잊어버렸어요)에 대한 훌륭한 글과, 또 어떤 잡지에서였는지 기억나지 않지만 여인들과 사랑, 결혼 등에 관해 나눈 흥미진진한 인터뷰들이요. 알랭인가, 세르주인가가 당신이 매우 고상한 의상을 걸치고 다닌다고 일러 주던데, 정말 당신이 맞아요?</p>
+                                </a>
+                            </li>
+                            <li class="short swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series2.png" alt="시리즈 썸네일"></div>
+                                    <strong>[연애편지] 미리보기</strong>
+                                    <h3>#4. 앙드레 지드, 알베르 카뮈, 찰리 채플린</h3>
+                                    <p>최근 파리 지성계의 최고 사건은 카뮈의 지독한 실패랍니다. 그가 소설 『페스트』를 길고 야심 찬 연극으로 만들어 일류 무대에 올렸지요. 저는 총연습에 가지 않았어요. 그곳에선 모든 사람이 턱시도와 야회 드레스를 보란 듯이 과시하는데, 사르트르와 저는 이를 혐오하지요. 연극에 대해 우리 친구들 대부분은 언론 의견에 동의해요. 지독한 실패작이라는 거예요. 맙소사! 사람들은 참으로 냉혹하고 악의에 차 있어요! 카뮈의 실패에 모두가 그렇게 만족해할 수 없답니다. 사람들은 사르트르가 이를 기뻐한다고 확신해요. 괴상해요. 작가들은 그렇게 질투하지 않고 서로 증오하지도 않지만, 연극계에서는 칼부림이 난무한답니다.</p>
+                                </a>
+                            </li>
+                            <li class="short swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series3.png" alt="시리즈 썸네일"></div>
+                                    <strong>[컬트] 미리보기</strong>
+                                    <h3>#5. 마셜 애플화이트와 천국문</h3>
+                                    <p>1970년대 초의 언젠가, 마셜 허프 애플화이트와 보니 루 네틀스는 유사 종교를 하나 만들어 냈다. 이들이 ‘천국문’이라고 명명한 이 신생 종교는 대중 과학 소설, 애플화이트의 유년기 체험 속 장로교, 네틀스의 뉴에이지 영성의 심령술 관련 잡동사니 등의 요소들을 뒤섞은 것이었다. 기본 전제는 단순했다. 자기네가 ‘인간을 넘어선 진화의 수준(The Evolutionary Level Above Human)’, 약자로 텔라(TELAH)에 대한 독점적인 지식을 가졌다고 주장했다. 이것이야말로 계몽되지 못한 사람들로서는 단지 한밤중에 UFO가 나타났을 때만 때때로 일별할 수 있는 우월한 지성이라고 했다. 두 사람은 이 수준까지 가는 방법을 알고 있다고, 심지어 자기네 가르침을 받아들일 준비가 되었음을 스스로 입증할 의향이 있는 선별된 극소수를 그곳으로 데려갈 수 있다고 주장했다.</p>
+                                </a>
+                            </li>
+                            <li class="long swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series4.png" alt="시리즈 썸네일"></div>
+                                    <strong>[컬트] 미리보기</strong>
+                                    <h3>#4. 크레도니아 음웨린데와 하느님의 십계명 회복 운동</h3>
+                                    <p>성모구조장(聖母救助場)에서 그녀는 추종자 가운데 5백 명 이상을 방주라고 일컬어지던 목제 건물로 데려갔는데, 그곳에는 이미 20리터짜리 휘발유통 68개가 줄줄이 비치되어 있었다. 곧이어 컬트의 고위 여사제로서 입문자들에게는 ‘설계자’로 통하던 음웨린데가 건물 밖으로 나오더니 나무 빗장을 밀어서 방주의 문을 잠갔다. 그리고 탈출할 길이 전혀 없다는 사실을 알고 있음에도 그녀는 불타기 쉬운 이 건물에 불을 질렀다. 이렇게 번진 불길이 워낙 사나웠기 때문에 그 지역 병리학자들은 처음에는 건물 안에 갇힌 열성 신자들의 머리가 폭발했다고 믿었을 정도였다.하지만 실제로는 시신이 불타면서 두개골이 부서지기 쉬운 상태로 변했고,머리 위에 있던 구조물이 와해되면서 떨어진 서까래에 유해가 산산조각 났을 가능성이 더 크다.</p>
+                                </a>
+                            </li>
+                            <li class="short swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series5.png" alt="시리즈 썸네일"></div>
+                                    <strong>[컬트] 미리보기</strong>
+                                    <h3>#3. 데이비드 코레시와 다윗가지파</h3>
+                                    <p>종말이 가까웠다고 약속하는 카리스마적 지도자를 격정적인 신자들이 추종하는 상황은 경계할 필요가 있다. 이런 휘발성 높은 제안은 죽음조차도 축복으로 바꿔 놓기 때문이다. 즉 죽음이야말로 환영받아야 할 운명이라고, 심지어 독려되어야 할 운명이라고 주장하는 것인데, 참된 신자에게는 죽음이 끝이 아니며, 오로지 그들을 위해서만 아껴 둔 낙원으로 들어가는 첫걸음이라는 이유에서다. 이것이야말로 텍사스주 웨이코에서 20킬로미터쯤 떨어진 액스텔 소재 다윗가지파(Branch Davidian)의 거주 시설인 마운트 카멜(Mount Carmel) 안에 머무른 많은 사람의 마음가짐이었다. 심지어 1993년 4월의 유혈 사태로부터 한참이 지난 지금까지도 여전히 남아 있는 이 신앙의 잔존자들은 자기네 지도자 데이비드 코레시가 내놓았던 예언이 신성하다고 간주한다.</p>
+                                </a>
+                            </li>
+                            <li class="long swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series6.png" alt="시리즈 썸네일"></div>
+                                    <strong>[현대 예술의 거장] 미리보기</strong>
+                                    <h3>쳇 베이커 : 그대 다시는 고향에 가지 못하리</h3>
+                                    <p>〈My Funny Valentine〉으로 잘 알려진 쳇 베이커는 천부적인 감각을 지닌 음악가였다. 부드럽고 서정적인 연주와 모성을 자극하는 목소리로 사람들을 사로잡았지만 동시에 그는 수십 년간 마약을 끊지 못했고, 수많은 동료 음악가와 연인들에게 돌이킬 수 없는 상처를 준 인물이었다. 이 책은 쳇 베이커의 주변 인물들과 나눈 인터뷰와 미발표 자료를 아우르는 방대한 조사를 통해 모순에 휩싸인 한 인간의 생애와 예술 세계를 파헤친다. 비운의 뮤지션이 마주했던 삶의 공포와 혼란, 음악적 성취와 몰락이 유럽과 미국을 오가며 치열하게 탐구한 저자의 펜 끝에서 생생하게 펼쳐진다.</p>
+                                </a>
+                            </li>
+                            <li class="short swiper-slide">
+                                <a href="#n">
+                                    <div class="photo"><img src="imges/series7.png" alt="시리즈 썸네일"></div>
+                                    <strong>[현대 예술의 거장] 미리보기</strong>
+                                    <h3>찰스 밍거스 : 소리와 분노</h3>
+                                    <p>혁신적인 작곡가이자 베이스 연주자인 찰스 밍거스의 삶과 음악 전반을 아우르는 평전 『찰스 밍거스 : 소리와 분노』가 출간되었다. 이 책은 그의 격정적인 삶과 음악을 입체적으로 들여다보며 그를 둘러싼 신화와 진실 사이를 파고든다. 지은이는 객관적 자료를 면밀히 탐사하고 그의 가족,친구,동료, 사이드맨, 막후의 인물 등 다방면의 사람들과 수백 차례 인터뷰하며 밍거스의 초상을 완성했다. 제2차 세계대전 이후 폭발한 문화의 르네상스 시대에 인종주의에 대한 노골적인 반감을 드러내며 경계인이자 예술가로 살았던 한 인간의 내면이 생생하게 펼쳐진다.</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="more"><a href="#n">전체보기</a></div>
+                </div><!--wrapper-->
+            </section><!--series-->
         </main><!--container-->
         <footer></footer>
     </div><!--wrap-->
