--- a/cheongsando/index.html
+++ b/cheongsando/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <!-- 반드시 jquery 라이브러리를 먼저 호출할 것. -->
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/main.js"></script>
     <title>청산도</title>
 </head>
 <body>
     <div id="wrap">
-        <header>
+        <header class="fixed">
             <div class="wrapper">
                 <h1 class="logo"><a href="index.html"><img src="imges/logo.svg" alt="완도군 청산도"></a></h1>
                 <nav class="gnb">
@@ -192,8 +195,18 @@
                     </div><!--//f_info-->
                     <div class="copyright">ⓒ cheongsando.net All rights reserved.</div><!--//copyright-->
                 </div><!--//inner-->
+                <!-- familysite가 열리면 class:open이 추가되고 닫히면 삭제될 것임 -->
                 <div class="familysite">
-                    <button>Family Site</button>
+                    <button class="btn_open" title="열기">Family Site</button>
+                    <div class="list">
+                        <ul>
+                            <li><a href="https://m.post.naver.com/my.nhn?memberNo=20168227" target="_blank" title="새창열림">네이버포스트</a></li>
+                            <li><a href="https://www.instagram.com/eulyoo/" target="_blank" title="새창열림">인스타그램</a></li>
+                            <li><a href="https://www.facebook.com/eulyoo/" target="_blank" title="새창열림">페이스북</a></li>
+                            <li><a href="https://www.youtube.com/@eulyoo1945" target="_blank" title="새창열림">유튜브</a></li>
+                        </ul>
+                    </div>
+                    <button class="btn_close" title="닫기">Family Site</button>
                 </div><!--//familysite-->
             </div><!--//wrapper-->
         </footer>
