--- a/eulyoo/index.html
+++ b/eulyoo/index.html
@@ -6,6 +6,7 @@
     <!-- swiper CDN (CDN : swiper가 제공하는 js와 css을 가져와서 쓰는 것.)-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!-- browser 상단 타이틀 왼쪽 아이콘 등록 -->
     <link rel="stylesheet" href="css/main.css">
     <script src="js/jquery-3.7.1.min.js"></script> <!-- jquery을 작동시키는 라이브러리 
     반드시 내가 만든 js보다 먼저 불려있어야 함. -->
