--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <li><a href="samsungscholarship/index.html">June 14 - Samsung Scholarship (web responsible - pc/mobile)</a></li><br>
         <li><a href="test_kd/index.html">June 18 - 평가</a></li><br>
         <li><a href="test_0619/index.html">June 19 - Swiper, responsisble test</a></li><br>
-        <li><a href="eulyoo/index.html">June 21 - eulyoo - responsible test</a></li>
+        <li><a href="eulyoo/index.html">June 21 - eulyoo - responsible test</a></li><br>
+        <li><a href="animal/index.html">June 27 - Animal Shelter</a></li>
 </ul>
 </body>
 </html>
